# unicode-tools

./: .gitignore  README.md  setup.cfg
src/unicode_tools/: __init__.py  database.py  db.py  normalize.py  search.py  ucdatabase.py  uchr.py  ucsearch.py
tests/: test_basic.py
