[metadata]
name = unicode-tools
version = 0.2.0
author = Miki Yutani
author_email = mkyutani@gmail.com
description = Unicode tools
long_description = file: README.md
keywords = unicode
license = MIT License

[options]
zip_safe = False
package_dir = =src
packages = find:
install_requires =
    requests
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    uchr=unicode_tools.uchr:uchr
